2.5.4 -> 2.5.5:
	- updated cs translation.
	- arch/os compare from install is case insensitive.
	- permit rpm to be built in a sub-directory (--srcdir=DIR).
	- return CPIO_BAD_HEADER instead of exiting. (Scott M. Stone)
	- untranslate "(none)" for auto relocating script wrappers.
	- update and rename Czech (Pavel Makovec <pavelm@terminal.cz>)
	- non-linux arch/os identification (Eugene Kanter).
	- portable mode_t/pid_t typedefs.
	- fix check for trailing / in Prefix:
	- remove 2 character language name assumption.
	- add /usr/lib/rpm/find-lang.sh (W. L. Estes <wlestes@uncg.edu>)
	- miscellaneous portability cruft (Eugene Kanter).
	- Makefile: don't use ln -sf.
	- getOutputFrom(): fix race between last read on pipe and child death
	  (exacerbated in 2.5.4).
	- rpm.spec: create /usr/src/redhat/* in %install.

2.5.3 -> 2.5.4:
	- add Slovak translation (Stanislav Meduna <stano@trillian.eunet.sk>)
	- gettextify rpmMessage/rpmError/fprintf messages.
	- update po files; add cz to catalogs.
	- expand args using popt on pre-rpmReadConfigFiles arg pass.
	- skip arch checks if only packaging source rpm.
	- add license field to rpmpopt -qi alias.
	- macro expansion on buildroot before use.
	- provides/obsoletes requires tokens that begin with alnum or _.
	- non-zero exit status for verify failures.
	- hpux does setreuid differently (Hermann Lauer)
	- check for setreuid portably (Eugene Kanter).
	- add Serbian translation (Zoltan Csala <zcsala@iname.com>).
	- arch/os tables were not being initialized  for noarch builds.
	- quote users/groups/filenames in --setugids.
	- add Russian translation w man pages (Serguei Koubouchine <ksi@gu.net>)
	- fix virtual file attribute bug that skipped all files in binary rpm.
	- eliminate infinite loop with missing tmpdir (Trent Jarvi).
	- os_canon for CYGWIN32_NT/95.
	- rationalize autoconf detection of gzip/bzip2.
	- restore backward compatible rpmrc/rpmpopt symlinks.
	- update pt_BR translations (Arnaldo Carvalho de Melo).