@@ -1,4 +1,5 @@
 2.5.4 -> 2.5.5:
+	- fix install relocate for prefix=/ (Eugene Kanter).
 	- updated cs translation.
 	- arch/os compare from install is case insensitive.
 	- permit rpm to be built in a sub-directory (--srcdir=DIR).
